--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VUE_APP_BASE_URL = https://netease-cloud-music-c2c1ys55f-cc-0820.vercel.app
+VUE_APP_BASE_URL=http://192.168.122.36:1024
 VUE_APP_TIMEOUT=6000
