--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.9",
+    "echarts": "^5.4.3",
     "register-service-worker": "^1.7.2",
     "storejs": "^2.0.5",
     "vue": "^3.3.4",
@@ -27,6 +28,7 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@iconify/vue": "^4.1.1",
+    "@types/echarts": "^4.9.18",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
