--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "echo \"No test command specified\""
   },
   "dependencies": {
+    "@types/file-saver": "^2.0.5",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.9",
     "echarts": "^5.4.3",
+    "file-saver": "^2.0.5",
+    "install": "^0.13.0",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.2",
     "storejs": "^2.0.5",
